--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=InventoryManagementSystem
 # MySQL database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/practice
 spring.datasource.username=root
-spring.datasource.password=@Rajuroyal1
+spring.datasource.password=hariveera
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate configuration
@@ -14,4 +14,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Server port (optional)
-server.port=8080
+#server.port=8080
