security is added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Server port (optional)
 #server.port=8080
+
+spring.security.user.name=shiprocket
+spring.security.user.password=omuni
